<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:background="@color/light_black"
        tools:context=".userAction.login.LoginFragment">



        <ImageView
            android:id="@+id/otp_view"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
           android:src="@drawable/ic_chat"
           app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/maxMargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvLogin"

            />
        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_25sdp"
            android:fontFamily="@font/medium"
            android:text="@string/dope_team_welcomes_you"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle"
            app:layout_constraintBottom_toTopOf="@+id/tvFooter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp_view" />
        <TextView
            android:id="@+id/tvFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_25sdp"
            android:fontFamily="@font/medium"
            android:text="@string/agreeing"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle"
            app:layout_constraintBottom_toTopOf="@+id/rlCheck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin" />
        <RelativeLayout
            android:id="@+id/rlCheck"
            app:layout_constraintBottom_toTopOf="@+id/btContinue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

                <CheckBox
                    android:id="@+id/chSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_toEndOf="@id/chSignup"
                    android:autoLink="web"
                    android:clickable="true"

                    android:linksClickable="true"
                    android:text="@string/termsprivacy"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
        </RelativeLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:elevation="@dimen/_2sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rlCheck"
            android:insetBottom="0dp"
            android:fontFamily="@font/medium"
            android:layout_margin="@dimen/smallMargin"
            app:cornerRadius="@dimen/_15sdp"
            app:backgroundTint="@color/purple_700"
            android:drawableEnd="@drawable/ic_baseline_arrow_right_alt_24"
            android:text="@string/get_started" />


    </androidx.constraintlayout.widget.ConstraintLayout>
